<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_string"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/age_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"
        android:hint="@string/age_string"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/age_text"
        android:hint="@string/phone_string"
        android:textSize="24dp" />
    <EditText
        android:id="@+id/city_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/phone_text"
        android:hint="@string/city_string"
        android:textSize="24dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/city_text"
        android:padding="20dp"
        android:text="@string/save_string" >
    </Button>

    <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_button"
        android:padding="20dp" android:layout_gravity="center_horizontal"
        android:text="@string/show_string" >
    </Button>

</RelativeLayout>