<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

        <EditText
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_string"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@id/name_label"
            android:text="@string/age_string"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@id/age_text"
            android:text="@string/phone_string"
            android:textSize="24dp" />
        <EditText
            android:id="@+id/city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@id/phone_text"
            android:text="@string/city_string"
            android:textSize="24dp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/save_string" >
        </Button>

        <Button
    android:id="@+id/show_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/save_button"
    android:padding="20dp" android:layout_gravity="center_horizontal"
    android:text="@string/show_string" >
    </Button>

    </LinearLayout>
    </LinearLayout>
